made it recursive and colors to console

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/marciamoss/Constructor-Word-Guess#readme",
   "dependencies": {
+    "colors": "^1.3.3",
     "inquirer": "^6.2.2",
     "random-words": "^1.1.0"
   }
